--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/hver",
   "get_gold_package": "Få guldpakke",
   "search_language": "Søgningsprog",
-  "please_provide_more_details_about_what_you_are_reporting": "Giv flere detaljer om, hvad du rapporterer"
+  "please_provide_more_details_about_what_you_are_reporting": "Giv flere detaljer om, hvad du rapporterer",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
