--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/το καθένα",
   "get_gold_package": "Λήψη χρυσού πακέτου",
   "search_language": "Γλώσσα αναζήτησης",
-  "please_provide_more_details_about_what_you_are_reporting": "Δώστε περισσότερες λεπτομέρειες σχετικά με το τι αναφέρετε"
+  "please_provide_more_details_about_what_you_are_reporting": "Δώστε περισσότερες λεπτομέρειες σχετικά με το τι αναφέρετε",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
