--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/masing -masing",
   "get_gold_package": "Dapatkan paket emas",
   "search_language": "Bahasa pencarian",
-  "please_provide_more_details_about_what_you_are_reporting": "Harap berikan detail lebih lanjut tentang apa yang Anda laporkan"
+  "please_provide_more_details_about_what_you_are_reporting": "Harap berikan detail lebih lanjut tentang apa yang Anda laporkan",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
