--- a/src/locales/nb.json
+++ b/src/locales/nb.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/hver",
   "get_gold_package": "Få gullpakke",
   "search_language": "Søkespråk",
-  "please_provide_more_details_about_what_you_are_reporting": "Gi mer informasjon om hva du rapporterer"
+  "please_provide_more_details_about_what_you_are_reporting": "Gi mer informasjon om hva du rapporterer",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
