--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/každý",
   "get_gold_package": "Získajte zlatý balík",
   "search_language": "Výhľad",
-  "please_provide_more_details_about_what_you_are_reporting": "Uveďte ďalšie podrobnosti o tom, čo hlásíte"
+  "please_provide_more_details_about_what_you_are_reporting": "Uveďte ďalšie podrobnosti o tom, čo hlásíte",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
