--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/var och en",
   "get_gold_package": "Få guldpaket",
   "search_language": "Sökspråk",
-  "please_provide_more_details_about_what_you_are_reporting": "Ange mer information om vad du rapporterar"
+  "please_provide_more_details_about_what_you_are_reporting": "Ange mer information om vad du rapporterar",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
