--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/لكل منهما",
   "get_gold_package": "احصل على حزمة الذهب",
   "search_language": "لغة البحث",
-  "please_provide_more_details_about_what_you_are_reporting": "يرجى تقديم المزيد من التفاصيل حول ما تقوم بالإبلاغ عنه"
+  "please_provide_more_details_about_what_you_are_reporting": "يرجى تقديم المزيد من التفاصيل حول ما تقوم بالإبلاغ عنه",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
