--- a/src/locales/ca.json
+++ b/src/locales/ca.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/cadascun",
   "get_gold_package": "Obteniu paquet d'or",
   "search_language": "Llenguatge de cerca",
-  "please_provide_more_details_about_what_you_are_reporting": "Proporcioneu més detalls sobre el que informeu"
+  "please_provide_more_details_about_what_you_are_reporting": "Proporcioneu més detalls sobre el que informeu",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
