--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/jeweils",
   "get_gold_package": "Holen Sie sich Goldpaket",
   "search_language": "Suchsprache",
-  "please_provide_more_details_about_what_you_are_reporting": "Bitte geben Sie weitere Details zur Berichterstattung an, was Sie berichten"
+  "please_provide_more_details_about_what_you_are_reporting": "Bitte geben Sie weitere Details zur Berichterstattung an, was Sie berichten",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
