--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/cada uno",
   "get_gold_package": "Obtener el paquete de oro",
   "search_language": "Lenguaje de búsqueda",
-  "please_provide_more_details_about_what_you_are_reporting": "Proporcione más detalles sobre lo que está informando"
+  "please_provide_more_details_about_what_you_are_reporting": "Proporcione más detalles sobre lo que está informando",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
