--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/jokainen",
   "get_gold_package": "Hanki kultapaketti",
   "search_language": "Hakukieli",
-  "please_provide_more_details_about_what_you_are_reporting": "Anna lisätietoja siitä, mitä ilmoitat"
+  "please_provide_more_details_about_what_you_are_reporting": "Anna lisätietoja siitä, mitä ilmoitat",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
