--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -314,5 +314,6 @@
   "usd/each": "USD / chacun",
   "get_gold_package": "Obtenez un forfait Gold",
   "search_language": "Langue de recherche",
-  "please_provide_more_details_about_what_you_are_reporting": "Veuillez fournir plus de détails sur ce que vous signalez"
+  "please_provide_more_details_about_what_you_are_reporting": "Veuillez fournir plus de détails sur ce que vous signalez",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
