--- a/src/locales/hr.json
+++ b/src/locales/hr.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/svaki",
   "get_gold_package": "Dobiti zlatni paket",
   "search_language": "Jezik pretraživanja",
-  "please_provide_more_details_about_what_you_are_reporting": "Navedite više detalja o onome što prijavljujete"
+  "please_provide_more_details_about_what_you_are_reporting": "Navedite više detalja o onome što prijavljujete",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
