--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/각각",
   "get_gold_package": "금 패키지를 받으십시오",
   "search_language": "검색어",
-  "please_provide_more_details_about_what_you_are_reporting": "보고 한 내용에 대한 자세한 내용을 제공하십시오"
+  "please_provide_more_details_about_what_you_are_reporting": "보고 한 내용에 대한 자세한 내용을 제공하십시오",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
