--- a/src/locales/ms.json
+++ b/src/locales/ms.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/setiap",
   "get_gold_package": "Dapatkan pakej emas",
   "search_language": "Bahasa cari",
-  "please_provide_more_details_about_what_you_are_reporting": "Sila berikan lebih banyak maklumat mengenai apa yang anda laporkan"
+  "please_provide_more_details_about_what_you_are_reporting": "Sila berikan lebih banyak maklumat mengenai apa yang anda laporkan",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
