--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/każdy",
   "get_gold_package": "Zdobądź pakiet złota",
   "search_language": "Wyszukaj język",
-  "please_provide_more_details_about_what_you_are_reporting": "Podaj więcej szczegółów na temat tego, co zgłaszasz"
+  "please_provide_more_details_about_what_you_are_reporting": "Podaj więcej szczegółów na temat tego, co zgłaszasz",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
