--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -314,5 +314,6 @@
   "usd/each": "USD/кожен",
   "get_gold_package": "Отримайте золотий пакет",
   "search_language": "Мови пошуку",
-  "please_provide_more_details_about_what_you_are_reporting": "Будь ласка, надайте детальніше про те, про що ви повідомляєте"
+  "please_provide_more_details_about_what_you_are_reporting": "Будь ласка, надайте детальніше про те, про що ви повідомляєте",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
