--- a/src/locales/zh-rCN.json
+++ b/src/locales/zh-rCN.json
@@ -314,5 +314,6 @@
   "usd/each": "美元/每个",
   "get_gold_package": "获取黄金包",
   "search_language": "搜索语言",
-  "please_provide_more_details_about_what_you_are_reporting": "请提供有关您报告的内容的更多详细信息"
+  "please_provide_more_details_about_what_you_are_reporting": "请提供有关您报告的内容的更多详细信息",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
 }
