--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -315,5 +315,6 @@
   "get_gold_package": "Få guldpaket",
   "search_language": "Sökspråk",
   "please_provide_more_details_about_what_you_are_reporting": "Ange mer information om vad du rapporterar",
-  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Om du lämnar måste du registrera ditt konto igen och ta bort all information.",
+  "invalid_date_of_birth": "Ogiltigt födelsedatum"
 }
