--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -315,5 +315,6 @@
   "get_gold_package": "Få guldpakke",
   "search_language": "Søgningsprog",
   "please_provide_more_details_about_what_you_are_reporting": "Giv flere detaljer om, hvad du rapporterer",
-  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Hvis du forlader, bliver du nødt til at omregistrere din konto og slette alle oplysninger.",
+  "invalid_date_of_birth": "Ugyldig fødselsdato"
 }
