--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -315,5 +315,6 @@
   "get_gold_package": "Λήψη χρυσού πακέτου",
   "search_language": "Γλώσσα αναζήτησης",
   "please_provide_more_details_about_what_you_are_reporting": "Δώστε περισσότερες λεπτομέρειες σχετικά με το τι αναφέρετε",
-  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Εάν βγείτε από την έξοδο, θα πρέπει να επαναλάβετε τον λογαριασμό σας και να διαγράψετε όλες τις πληροφορίες.",
+  "invalid_date_of_birth": "Μη έγκυρη ημερομηνία γέννησης"
 }
