--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -315,5 +315,6 @@
   "get_gold_package": "Hanki kultapaketti",
   "search_language": "Hakukieli",
   "please_provide_more_details_about_what_you_are_reporting": "Anna lisätietoja siitä, mitä ilmoitat",
-  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Jos poistut, sinun on rekisteröitävä tilisi uudelleen ja poistettava kaikki tiedot.",
+  "invalid_date_of_birth": "Virheellinen syntymäpäivä"
 }
