--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -315,5 +315,6 @@
   "get_gold_package": "गोल्ड पैकेज प्राप्त करें",
   "search_language": "खोज भाषा",
   "please_provide_more_details_about_what_you_are_reporting": "कृपया आप जो रिपोर्ट कर रहे हैं उसके बारे में अधिक जानकारी प्रदान करें",
-  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "यदि आप बाहर निकलते हैं तो आपको अपने खाते को फिर से पंजीकृत करना होगा और सभी जानकारी को हटा देना होगा।",
+  "invalid_date_of_birth": "अमान्य जन्म तिथि"
 }
