--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -315,5 +315,6 @@
   "get_gold_package": "Ottieni un pacchetto d'oro",
   "search_language": "Lingua di ricerca",
   "please_provide_more_details_about_what_you_are_reporting": "Fornisci maggiori dettagli su ciò che stai segnalando",
-  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Se esci dovrai rinnovare il tuo account ed eliminare tutte le informazioni.",
+  "invalid_date_of_birth": "Data di nascita non valida"
 }
