--- a/src/locales/nb.json
+++ b/src/locales/nb.json
@@ -315,5 +315,6 @@
   "get_gold_package": "Få gullpakke",
   "search_language": "Søkespråk",
   "please_provide_more_details_about_what_you_are_reporting": "Gi mer informasjon om hva du rapporterer",
-  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Hvis du avslutter, må du registrere kontoen din på nytt og slette all informasjon.",
+  "invalid_date_of_birth": "Ugyldig fødselsdato"
 }
