--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -315,5 +315,6 @@
   "get_gold_package": "Krijg goudpakket",
   "search_language": "Doorzoektaal",
   "please_provide_more_details_about_what_you_are_reporting": "Geef meer informatie over wat u meldt",
-  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Als u verlaat, moet u uw account opnieuw registreren en alle informatie verwijderen.",
+  "invalid_date_of_birth": "Ongeldige geboortedatum"
 }
