--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -315,5 +315,6 @@
   "get_gold_package": "Obtenha pacote de ouro",
   "search_language": "Linguagem de pesquisa",
   "please_provide_more_details_about_what_you_are_reporting": "Forneça mais detalhes sobre o que você está relatando",
-  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Se você sair, terá que registrar novamente sua conta e excluir todas as informações.",
+  "invalid_date_of_birth": "Data de nascimento inválida"
 }
