--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -315,5 +315,6 @@
   "get_gold_package": "Obțineți pachet de aur",
   "search_language": "Limba de căutare",
   "please_provide_more_details_about_what_you_are_reporting": "Vă rugăm să furnizați mai multe detalii despre ceea ce raportați",
-  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Dacă ieșiți, va trebui să vă înregistrați contul și să ștergeți toate informațiile.",
+  "invalid_date_of_birth": "Data nașterii nevalide"
 }
