--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -315,5 +315,6 @@
   "get_gold_package": "Получите золотой пакет",
   "search_language": "Язык поиска",
   "please_provide_more_details_about_what_you_are_reporting": "Пожалуйста, предоставьте более подробную информацию о том, что вы сообщаете",
-  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Loading..."
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Если вы выйдете в выход, вам придется перерегистрировать свою учетную запись и удалить всю информацию.",
+  "invalid_date_of_birth": "Неверная дата рождения"
 }
