--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -55,6 +55,8 @@
   "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "Let everyone know what you're passionate about, by adding it to your profile",
   "show_me_gender": "Show me gender",
   "my_photos_are": "My Photos are",
+  "add_interests": "Add interests",
+  "add_sexual": "Add sexual",
   "add_at_least_2_photos_to_continue": "Add at least 2 photos to continue",
   "enable_location": "Enable Location",
   "you_will_need_to_enable_your_location_order_to_use_heartLinks": "You will need to enable your location order to use HeartLinks",
