--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -137,7 +137,7 @@
   "show_me": "Cho tôi xem",
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "Chúng tôi sử dụng các tùy chọn này để tìm các trận đấu. Một số đề xuất phù hợp có thể không nằm trong các tham số mong muốn của bạn",
   "control_who_you_see": "Kiểm soát người bạn nhìn thấy",
-  "sliver_package": "Gói sliver",
+  "sliver_package": "Gói bạc",
   "balance_recommendations": "Khuyến nghị cân bằng",
   "see_the_most_relevant_people_to_you_(default_settings)": "Xem những người phù hợp nhất với bạn (cài đặt mặc định)",
   "recently_active": "Mới hoạt động",
@@ -175,11 +175,13 @@
   "search_interest": "Tìm kiếm lãi",
   "dating_purposes": "Mục đích hẹn hò",
   "i'm_looking_for": "Tôi đang tìm kiếm",
-  "empty": "trống",
+  "empty": "Trống",
   "now_i'm_looking_for...": "Bây giờ tôi đang tìm kiếm ...",
   "share_the_purpose_to_find_'that_person'": "Chia sẻ mục đích để tìm 'người đó'",
   "i_know_languages": "Tôi biết ngôn ngữ",
   "the_language_i_know": "Ngôn ngữ tôi biết",
+  "add_interests": "Thêm sở thích",
+  "add_sexual": "Thêm khuynh hướng tình dục",
   "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Chọn tối đa 5 ngôn ngữ bạn biết và thêm vào hồ sơ của bạn",
   "basic_information": "THÔNG TIN CƠ BẢN",
   "add_more_info_so_people_can_see_your_amazing_pictures": "Thêm thông tin để mọi người có thể xem hình ảnh tuyệt vời của bạn",
