--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -172,7 +172,7 @@
   "about_me_-_maximize_500_words": "Về tôi - tối đa hóa 500 từ",
   "interest": "QUAN TÂM",
   "out_of_5": "ngoài 5",
-  "search_interest": "Tìm kiếm lãi",
+  "search_interest": "Tìm kiếm sở thích",
   "dating_purposes": "Mục đích hẹn hò",
   "i'm_looking_for": "Tôi đang tìm kiếm",
   "empty": "Trống",
