--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -80,7 +80,7 @@
   "are_you_sure_about_the_content_of_this_report?": "Bạn có chắc chắn về nội dung của báo cáo này?",
   "let's_find_people_same_with_your_vibe...": "Hãy tìm mọi người giống với sự rung cảm của bạn ...",
   "join_now": "Tham gia ngay",
-  "no_thanks": "KHÔNG, CÁM ƠN",
+  "no_thanks": "Không, cảm ơn",
   "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Nâng cấp lên vàng để xem những người quan tâm đến bạn",
   "no_one_likes_you_yet._done't_worry,_make_sure_you_complete_your_profile_to_other_find_you_faster": "Chưa ai thích bạn. Đừng lo lắng, hãy chắc chắn rằng bạn hoàn thành hồ sơ của mình để tìm bạn nhanh hơn",
   "see_who_likes_you": "Xem ai thích bạn",
