--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -66,9 +66,9 @@
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "من السهل - مشاركة اتصال جهازك مع HeartLink عند استخدام هذه الميزة لاختيار من تريد تجنبه",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "سنقوم بتخزين جهة الاتصال المحظورة الخاصة بك لمنعك من رؤية بعضنا البعض إذا كان جهة الاتصال الخاصة بك تحتوي على حساب مع نفس Infor الذي تقدمه. يمكنك التوقف عن المشاركة معنا في إعداداتك.",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "تعرف على المزيد هنا ، بما في ذلك كيفية معالجة HeartLink جهات الاتصال الخاصة بك",
-  "share_{nameUser}_profile": "مشاركة {nameuser} ملف تعريف",
+  "share_{nameUser}_profile": "مشاركة {nameUser} ملف تعريف",
   "see_what_a_friend_thinks": "انظر ماذا يفكر صديق",
-  "report_{nameUser}": "تقرير {nameuser}",
+  "report_{nameUser}": "تقرير {nameUser}",
   "away": "بعيد",
   "my_anthem": "نشيد بلدي",
   "what_is_the_reason_for_your_report?": "ما هو سبب تقريرك؟",
