--- a/src/locales/ca.json
+++ b/src/locales/ca.json
@@ -66,9 +66,9 @@
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "És fàcil: compartiu el contacte del vostre dispositiu amb HeartLink quan utilitzeu aquesta funció per triar a qui voleu evitar",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Emmagatzemarem el vostre contacte bloquejat per evitar que es vegi si el vostre contacte té un compte amb la mateixa informació que proporcioneu. Podeu deixar de compartir amb nosaltres a la vostra configuració.",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "Obteniu més informació aquí, inclòs com processen els vostres contactes",
-  "share_{nameUser}_profile": "Comparteix {Nameuser} perfil",
+  "share_{nameUser}_profile": "Comparteix {nameUser} perfil",
   "see_what_a_friend_thinks": "Mireu què pensa un amic",
-  "report_{nameUser}": "Informe {Nameuser}",
+  "report_{nameUser}": "Informe {nameUser}",
   "away": "lluny",
   "my_anthem": "El meu himne",
   "what_is_the_reason_for_your_report?": "Quin és el motiu del vostre informe?",
