--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -66,9 +66,9 @@
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "簡単です - この機能を使用して避けたい人を選ぶとき、デバイスの連絡先をハートリンクと共有する",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "連絡先がお互いに会うのを止めるために、ブロックされた連絡先を保存してください。あなたはあなたの設定で私たちと共有するのをやめることができます。",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "ハートリンクが連絡先を処理する方法を含む詳細をご覧ください",
-  "share_{nameUser}_profile": "共有{nameuser}プロファイル",
+  "share_{nameUser}_profile": "共有{nameUser}プロファイル",
   "see_what_a_friend_thinks": "友達がどう思うか見てください",
-  "report_{nameUser}": "レポート{nameuser}",
+  "report_{nameUser}": "レポート{nameUser}",
   "away": "あちらへ",
   "my_anthem": "私の国歌",
   "what_is_the_reason_for_your_report?": "あなたのレポートの理由は何ですか？",
