--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -66,9 +66,9 @@
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "쉽습니다 -이 기능을 사용하여 피하고 싶은 사람을 선택할 때 장치의 Heartlink와의 접촉을 공유하십시오.",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "귀하의 연락처에 귀하가 제공하는 동일한 정보가있는 계정이 있으면 서로를 보지 못하도록 차단 된 연락처를 저장하겠습니다. 당신은 당신의 설정에서 우리와 공유를 중지 할 수 있습니다.",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "Heartlink가 연락처를 처리하는 방법을 포함하여 여기에서 자세히 알아보십시오.",
-  "share_{nameUser}_profile": "{nameuser} 프로파일을 공유하십시오",
+  "share_{nameUser}_profile": "{nameUser} 프로파일을 공유하십시오",
   "see_what_a_friend_thinks": "친구가 어떻게 생각하는지보십시오",
-  "report_{nameUser}": "보고서 {nameuser}",
+  "report_{nameUser}": "보고서 {nameUser}",
   "away": "떨어져 있는",
   "my_anthem": "내 애국가",
   "what_is_the_reason_for_your_report?": "보고서의 이유는 무엇입니까?",
