--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -66,9 +66,9 @@
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "É fácil - compartilhe o contato do seu dispositivo com o HeartLink ao usar esse recurso para escolher quem você deseja evitar",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Armazetaremos seu contato bloqueado para impedir que você se veja se o seu contato tiver uma conta com o mesmo Infor que você fornece. Você pode parar de compartilhar conosco em suas configurações.",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "Saiba mais aqui, incluindo como o HeartLink processa seus contatos",
-  "share_{nameUser}_profile": "Compartilhar {NameUser} perfil",
+  "share_{nameUser}_profile": "Compartilhar {nameUser} perfil",
   "see_what_a_friend_thinks": "Veja o que um amigo pensa",
-  "report_{nameUser}": "Relatório {NameUser}",
+  "report_{nameUser}": "Relatório {nameUser}",
   "away": "ausente",
   "my_anthem": "Meu hino",
   "what_is_the_reason_for_your_report?": "Qual é o motivo do seu relatório?",
