--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -240,7 +240,7 @@
   "interests": "Interesser",
   "my_gender": "Mit køn",
   "my_orientation": "min orientering",
-  "version_x.y.z": "Version X.Y.Z",
+  "version_x.y.z": "Version",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Live at {NameAddress}",
