--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -240,7 +240,7 @@
   "interests": "Interessen",
   "my_gender": "Mein Geschlecht",
   "my_orientation": "meine Orientierung",
-  "version_x.y.z": "Version X.Y.Z",
+  "version_x.y.z": "Version",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Lebe bei {nameaddress}",
